ecmascript/parser/tests/test262-error-references/fail/16947dc1d11e5e70.js.stderr
error: Expected (, got yield
 --> $DIR/tests/test262-parser/fail/16947dc1d11e5e70.js:1:11
  |
1 | (function*yield(){})
  |           ^^^^^

